deploy/overlays/production/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: pvdd
spec:
  host: pvdd.vdzonsoftware.nl
  to: {kind: Service, name: frontend}
  port: {targetPort: http}
  tls: {termination: edge, insecureEdgeTerminationPolicy: Redirect}
